--- a/server/views/main-development.ejs
+++ b/server/views/main-development.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1"/>
     <base href="/">
     <title>Sample App</title>
+    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script type="text/javascript">
         window.meta = <%- JSON.stringify(params.meta || {}) %>;
         window.session = <%- JSON.stringify(params.session|| {}) %>;
