--- a/client/pages/main/views/auth/signup-normal.html
+++ b/client/pages/main/views/auth/signup-normal.html
@@ -73,8 +73,8 @@
 
         </div>
 
-        <div class="content-footer">
-            <p><a>페이스북</a> 또는 <a>카카오톡</a> 으로 3초만에 가입하기</p>
+        <div class="content-footer" data-ng-controller="SigninCtrl">
+            <p><a href="#"  ng-click="vm.facebookLogin()">페이스북</a> 또는 <a href="#" ng-click="vm.kakaoLogin()">카카오톡</a> 으로 3초만에 가입하기</p>
         </div>
     </div>
 
