--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -18,6 +18,7 @@
 <div ui-view="header"></div>
 <div ui-view="contents"></div>
 <div ui-view="footer"></div>
+<div data-ng-include src="'modules/base/alert-dialog/views/core.alert-dialog.html'"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 <!-- inject:js -->
