--- a/client/pages/main/assets/stylesheets/components/_auth-signin.scss
+++ b/client/pages/main/assets/stylesheets/components/_auth-signin.scss
@@ -23,24 +23,70 @@
               text-align: center;
             }
             .facebook {
-              background-color: #4f6ca7;
+
               margin-bottom: 10px;
+              position: relative;
+
+              .border-vertical{
+                border-right: 1px solid #fff;
+                position: absolute;
+                top: 7px;
+                left: 65px;
+                z-index: 5;
+                height: 47px;
+              }
+
               a {
                 width: 100%;
                 display: block;
                 height: 100%;
-                padding-top: 20px;
+                padding-top: 23px;
+                padding-left: 10px;
                 color: #ffffff;
+                z-index: 3;
+                position: absolute;
+                background-color: #4f6ca7;
+                background-image: url(/pages/main/assets/images/facebook.png);
+                background-repeat: no-repeat;
+                background-position-y: 18px;
+                background-position-x: 30px;
+              }
+              a:hover{
+                background-color: #1C3974;
+
               }
             }
+
             .kakaotalk {
               background-color: #fdeb1d;
+              position: relative;
+
+              .border-vertical{
+                border-right: 1px solid #553f42;
+                position: absolute;
+                top: 7px;
+                left: 65px;
+                z-index: 5;
+                height: 47px;
+              }
+
               a {
+                background-image: url('/pages/main/assets/images/kakao_talk_24.png');
+                background-repeat: no-repeat;
+                background-size: 30px;
+                background-position: 20px;
                 width: 100%;
                 display: block;
                 height: 100%;
-                padding-top: 20px;
+                padding-top: 23px;
+                padding-left: 10px;
                 color: #553f42;
+                z-index: 3;
+                position: absolute;
+
+              }
+              a:hover{
+                background-color: #CAB800;
               }
             }
           }
@@ -88,6 +134,9 @@
               margin-top: 5px;
               color: #ffffff;
             }
+            button:hover{
+              background-color: #45a19f;
+            }
           }
           .save-pass {
             float: left;
@@ -114,6 +163,9 @@
               text-align: center;
               color: #464646;
             }
+            p a:hover{
+              text-decoration: underline;
+            }
           }
         }
         .content-footer {
@@ -127,6 +179,9 @@
             letter-spacing: -0.4px;
             text-align: center;
             color: #1fc9c6;
+          }
+          .signup-wrapper a:hover {
+            text-decoration: underline;
           }
         }
         .content-body .signin-wrapper .checks {
