--- a/client/pages/main/views/auth/header.html
+++ b/client/pages/main/views/auth/header.html
@@ -2,11 +2,11 @@
     <h1>도와도</h1>
 
     <nav class="nav">
-        <ul class="nav-mane" data-ng-if="!vm.isLoggedIn()">
+        <ul class="nav-menu" data-ng-if="!vm.isLoggedIn()">
             <li ><a href="#" ng-click="vm.goToSignin()">로그인</a></li>
             <li><a href="#" ng-click="vm.goToSignUp()">회원가입</a></li>
         </ul>
-        <ul class="nav-mane" data-ng-if="vm.isLoggedIn()">
+        <ul class="nav-menu" data-ng-if="vm.isLoggedIn()">
             <li ><a href="#" ng-click="vm.logout()">로그아웃</a></li>
         </ul>
     </nav>
