--- a/client/pages/main/views/auth/index.html
+++ b/client/pages/main/views/auth/index.html
@@ -1,4 +1,4 @@
-<div class="container-wrapper">
+<div class="container-wrapper auth">
     <div ui-view="header"></div>
     <div ui-view="contents"></div>
 </div>
