--- a/client/pages/main/views/contents/home.html
+++ b/client/pages/main/views/contents/home.html
@@ -1,6 +1,70 @@
-<div>
-    <h2>따란~</h2>
-</div>
-<div>
-    <h3 data-ng-click="vm.userLeave()">회원 탈퇴</h3>
+<div class="container-wrapper home">
+
+    <div class="container">
+
+        <h3 class="theme-title">요리 리시피<span>20</span></h3>
+
+        <div class="contents-warpper">
+            <figure class="content-warpper">
+                <div class="image-wrapper">
+                    <a>
+                        <div class="main-img"> </div>
+                    </a>
+                    <a>
+                        <div class="second-img"> </div>
+                    </a>
+                    <a>
+                        <div class="third-img"> </div>
+                    </a>
+
+
+                </div>
+
+                <div class="profile-wrapper">
+                    <div class="profile-top-wrapper">
+                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                        <h4>룰루언니</h4>
+                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                    </div>
+                </div>
+            </figure>
+
+            <figure class="content-warpper">
+                <div class="image-wrapper">
+                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjdfMjEg/MDAxNDgwMjIzMTA0MDk3.9mk6XEJXDaMpq9lPqBTF9UKa8xJ4QOgT8pnCIo43qEAg.pYv0Jf5xLCCqk89Z5kejflTuu3Xl_b5IJ4MfMqZ1i68g.JPEG.hwaim100/20161127_131947.jpg?type=w420">
+                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjZfNzEg/MDAxNDgwMTQ0NTE5Nzgx.hoO68P8COoHi30qjRpGQyqa0v50XP8uhO4h4eEHNqjYg.BfuUdDd7tWpWZ4CioLfr2gFm0hoTV1S9sq9L9N43TdAg.JPEG.hwaim100/IMG_20161126_5.jpg?type=w420">
+                    <img src="http://mblogthumb4.phinf.naver.net/MjAxNjExMjVfMjcz/MDAxNDgwMDQ2MDM4MzQx.4n1lsDSVVnuIZAo_GLay-7IBBK5yj_e_zg-Alp3nzcgg.EClMnhhsz3Z2cmX76laOP78U0Y0ryMf48IFckvIrwJ0g.JPEG.hwaim100/IMG_2596.JPG?type=w420">
+                </div>
+
+                <div class="profile-wrapper">
+                    <div class="profile-top-wrapper">
+                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                        <h4>룰루언니</h4>
+                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                    </div>
+                </div>
+            </figure>
+
+            <figure class="content-warpper">
+                <div class="image-wrapper">
+                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjdfMjEg/MDAxNDgwMjIzMTA0MDk3.9mk6XEJXDaMpq9lPqBTF9UKa8xJ4QOgT8pnCIo43qEAg.pYv0Jf5xLCCqk89Z5kejflTuu3Xl_b5IJ4MfMqZ1i68g.JPEG.hwaim100/20161127_131947.jpg?type=w420">
+                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjZfNzEg/MDAxNDgwMTQ0NTE5Nzgx.hoO68P8COoHi30qjRpGQyqa0v50XP8uhO4h4eEHNqjYg.BfuUdDd7tWpWZ4CioLfr2gFm0hoTV1S9sq9L9N43TdAg.JPEG.hwaim100/IMG_20161126_5.jpg?type=w420">
+                    <img src="http://mblogthumb4.phinf.naver.net/MjAxNjExMjVfMjcz/MDAxNDgwMDQ2MDM4MzQx.4n1lsDSVVnuIZAo_GLay-7IBBK5yj_e_zg-Alp3nzcgg.EClMnhhsz3Z2cmX76laOP78U0Y0ryMf48IFckvIrwJ0g.JPEG.hwaim100/IMG_2596.JPG?type=w420">
+                </div>
+
+                <div class="profile-wrapper">
+                    <div class="profile-top-wrapper">
+                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                        <h4>룰루언니</h4>
+                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                    </div>
+                </div>
+            </figure>
+        </div>
+
+
+
+
+
+    </div>
 </div>
