--- a/client/pages/main/views/contents/home.html
+++ b/client/pages/main/views/contents/home.html
@@ -1,70 +1,322 @@
 <div class="container-wrapper home">
 
     <div class="container">
+        <div class="theme-wrapper">
+            <h3 class="theme-title">요리 리시피<span> (20)</span></h3>
+            <a href="#" class="more">더보기</a>
 
-        <h3 class="theme-title">요리 리시피<span>20</span></h3>
-
-        <div class="contents-warpper">
-            <figure class="content-warpper">
-                <div class="image-wrapper">
-                    <a>
-                        <div class="main-img"> </div>
-                    </a>
-                    <a>
-                        <div class="second-img"> </div>
-                    </a>
-                    <a>
-                        <div class="third-img"> </div>
-                    </a>
-
-
-                </div>
-
-                <div class="profile-wrapper">
-                    <div class="profile-top-wrapper">
-                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
-                        <h4>룰루언니</h4>
-                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+            <div class="contents-warpper">
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
                     </div>
-                </div>
-            </figure>
 
-            <figure class="content-warpper">
-                <div class="image-wrapper">
-                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjdfMjEg/MDAxNDgwMjIzMTA0MDk3.9mk6XEJXDaMpq9lPqBTF9UKa8xJ4QOgT8pnCIo43qEAg.pYv0Jf5xLCCqk89Z5kejflTuu3Xl_b5IJ4MfMqZ1i68g.JPEG.hwaim100/20161127_131947.jpg?type=w420">
-                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjZfNzEg/MDAxNDgwMTQ0NTE5Nzgx.hoO68P8COoHi30qjRpGQyqa0v50XP8uhO4h4eEHNqjYg.BfuUdDd7tWpWZ4CioLfr2gFm0hoTV1S9sq9L9N43TdAg.JPEG.hwaim100/IMG_20161126_5.jpg?type=w420">
-                    <img src="http://mblogthumb4.phinf.naver.net/MjAxNjExMjVfMjcz/MDAxNDgwMDQ2MDM4MzQx.4n1lsDSVVnuIZAo_GLay-7IBBK5yj_e_zg-Alp3nzcgg.EClMnhhsz3Z2cmX76laOP78U0Y0ryMf48IFckvIrwJ0g.JPEG.hwaim100/IMG_2596.JPG?type=w420">
-                </div>
-
-                <div class="profile-wrapper">
-                    <div class="profile-top-wrapper">
-                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
-                        <h4>룰루언니</h4>
-                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                           <span>이웃 324명</span>
+                        </div>
                     </div>
-                </div>
-            </figure>
+                </figure>
 
-            <figure class="content-warpper">
-                <div class="image-wrapper">
-                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjdfMjEg/MDAxNDgwMjIzMTA0MDk3.9mk6XEJXDaMpq9lPqBTF9UKa8xJ4QOgT8pnCIo43qEAg.pYv0Jf5xLCCqk89Z5kejflTuu3Xl_b5IJ4MfMqZ1i68g.JPEG.hwaim100/20161127_131947.jpg?type=w420">
-                    <img src="http://mblogthumb1.phinf.naver.net/MjAxNjExMjZfNzEg/MDAxNDgwMTQ0NTE5Nzgx.hoO68P8COoHi30qjRpGQyqa0v50XP8uhO4h4eEHNqjYg.BfuUdDd7tWpWZ4CioLfr2gFm0hoTV1S9sq9L9N43TdAg.JPEG.hwaim100/IMG_20161126_5.jpg?type=w420">
-                    <img src="http://mblogthumb4.phinf.naver.net/MjAxNjExMjVfMjcz/MDAxNDgwMDQ2MDM4MzQx.4n1lsDSVVnuIZAo_GLay-7IBBK5yj_e_zg-Alp3nzcgg.EClMnhhsz3Z2cmX76laOP78U0Y0ryMf48IFckvIrwJ0g.JPEG.hwaim100/IMG_2596.JPG?type=w420">
-                </div>
-
-                <div class="profile-wrapper">
-                    <div class="profile-top-wrapper">
-                        <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
-                        <h4>룰루언니</h4>
-                        <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
                     </div>
-                </div>
-            </figure>
+
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                            <span>이웃 324명</span>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
+                    </div>
+
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                            <span>이웃 324명</span>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+
         </div>
 
+        <div class="theme-wrapper">
+            <h3 class="theme-title">요리 리시피<span> (20)</span></h3>
+            <a href="#" class="more">더보기</a>
+
+            <div class="contents-warpper">
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
+                    </div>
+
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                            <span>이웃 324명</span>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
+                    </div>
+
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                            <span>이웃 324명</span>
+                        </div>
+                    </div>
+                </figure>
+
+                <figure class="content-warpper">
+                    <div class="image-wrapper">
+                        <a>
+                            <div class="main-img"> </div>
+                        </a>
+                        <a>
+                            <div class="second-img"> </div>
+                        </a>
+                        <a>
+                            <div class="third-img"> </div>
+                        </a>
+                    </div>
+
+                    <div class="profile-wrapper">
+                        <div class="profile-top-wrapper">
+                            <img src="http://blogpfthumb.phinf.naver.net/20151029_233/hwaim100_1446076641507B5I8P_JPEG/profileimage.jpg?type=s1">
+                            <h4>룰루언니</h4>
+                            <p>룰루언니의 참쉬운 노오븐 간단 간식 레시피! 브런치 메뉴 달콤한 아이드 ㄹ간식레시피!</p>
+                            <span>이웃 324명</span>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+        </div>
+    </div>
+    <div class="container blog-info">
+        <div class="container-title">
+            루키 블로그
+        </div>
+        <div class="blog-info-list-wrapper">
+            <div class="blog_area">
+                <p class="desc hidden_sm">최근 1년 이내, 새롭게 블로그를 시작한 사용자를 소개합니다.</p>
+                <div class="blog_list">
+
+                    <a href="http://blog.naver.com/m_802" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/MjAxNjExMjZfODcg/MDAxNDgwMDk2NzY5NDQ3.FPnY-LGS_Pp6xtJdMfQ3L5jxTdyPilESJkeibkNC3EMg.GTSecekDhaDD2iWa13Y_cjjOwiksnYjqLtCahcKlGt8g.PNG.m_802/1480096710387.png?type=s1" class="avatar" alt="thumbnail">
 
 
 
+                            <div class="meta">
+                                <strong class="nick ell">포키</strong>
+                                <p class="name ell">*✲ﾟ*</p>
+                                <span class="date">16.09.29 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/woo-zzi" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20160722_68/woo-zzi_1469150378381aMh3H_JPEG/profileImage.jpg?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">우찌</strong>
+                                <p class="name ell">헬로우찌</p>
+                                <span class="date">16.01.23 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/pharmaspick" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20160826_129/pharmaspick_1472175081389HjpAF_PNG/%25C4%25B8%25C3%25B31412323232.PNG?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">시골약사</strong>
+                                <p class="name ell">시골약사의 하루</p>
+                                <span class="date">16.08.22 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/jsk8808" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/MjAxNjEwMjNfMjU4/MDAxNDc3MjE5Mjg4MzYx.lcFpa6sieIXtwCWrFhj72za5znsGtKB2fvkxYnwEIsEg.wEAAIt5YnGPUrhiVDzeQcVt0NyIuIiZqZ5-5c_v0-OYg.JPEG.jsk8808/11.jpg?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">동네바보형</strong>
+                                <p class="name ell">동네바보형의 정보 이야기</p>
+                                <span class="date">16.10.05 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/doo_gijun" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/MjAxNjExMDVfMTU3/MDAxNDc4MjczNzgwNzE4.y32LHFRv9JeKptNuBKk9glFYZ_A86XUfVMfZR_m_93Yg.sVI5Ylbu_fNjjSccRMDxacrnEjXG1TB57CDtU1jFYxcg.JPEG.doo_gijun/KakaoTalk_Moim_5GUNFstyU86oYpcoiKUZaJsLduyCpr.jpg?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">만두</strong>
+                                <p class="name ell">DOO_MINJI</p>
+                                <span class="date">16.10.10 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/emahd12" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20160501_108/emahd12_1462097359955KgxNU_PNG/%25C7%25C1%25BB%25E7%25BF%25B0.png?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">러브</strong>
+                                <p class="name ell">별이 지다</p>
+                                <span class="date">16.04.24 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/p-cher" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20160604_242/p-cher_1465009436833YmERN_PNG/logo.png?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">더피처피티</strong>
+                                <p class="name ell">파워포인트를 파워UP하는 더피처피티</p>
+                                <span class="date">16.04.08 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/ruuppp" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20161007_24/ruuppp_1475828509175r63qv_JPEG/IMG_0686%25BC%25F6.jpg?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">푸린</strong>
+                                <p class="name ell">별에서 온 푸린</p>
+                                <span class="date">16.10.04 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/pinkim071" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/20160722_234/pinkim071_1469159535698PQhrq_JPEG/%25C5%25A9%25B1%25E2%25BA%25AF%25C8%25AF_kim2.jpg?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell"></strong>
+                                <p class="name ell">김성림의 쉬운요리천국</p>
+                                <span class="date">16.07.21 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                    <a href="http://blog.naver.com/eogh0718" target="_blank" onclick="nclk(this, 'rkr.blog', '', '');">
+                        <div class="blog">
+
+                            <img src="http://blogpfthumb.phinf.naver.net/MjAxNjEwMjFfMTcw/MDAxNDc3MDU5NDU5NTcw.4WSujw1iTHYTB3dndfgjJDvl55Sb4QatJwKKgkEbKl4g.GdufWC2IrpQV8kWnWlEBqX7ZvTFWvU3xTcwQbVjf_l0g.GIF.eogh0718/%25C7%25C1%25BB%25E71.gif?type=s1" class="avatar" alt="thumbnail">
+
+
+
+                            <div class="meta">
+                                <strong class="nick ell">슬렌</strong>
+                                <p class="name ell">슬렌의 게임스토리</p>
+                                <span class="date">16.09.09 시작</span>
+                            </div>
+                        </div>
+                    </a>
+
+                </div>
+            </div>
+
+        </div>
 
     </div>
 </div>
